# main_cpp_hw1

./: CMakeLists.txt  README.md
include/: Algorithms.h  DataExporter.h  DataManager.h  DataObject.h  Pixel.h  PointCloudData.h  SatelliteImage.h
report/: 大作业设计.pptx
src/: DataObject.cpp  PointCloudData.cpp  PointCloudData.h  SatelliteImage.cpp  main.cpp  main.ilk
